# ImBridge

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: Bridge.cpp  Parameter.cpp
src/include/ImBridge/: Bridge.hpp  Common.hpp  Parameter.hpp  ParameterFactory.hpp
